[gd_scene load_steps=7 format=3 uid="uid://5ymnuvhlss3c"]

[ext_resource type="Script" path="res://assets/scripts/ui/feedback/notifications/notice.gd" id="1_h616u"]
[ext_resource type="Texture2D" uid="uid://blip53ufv0jwb" path="res://icon.png" id="2_oe23o"]

[sub_resource type="Animation" id="Animation_3s3em"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_wdodc"]
resource_name = "create"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_d20ay"]
resource_name = "delete"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"notice_delete"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_77blq"]
_data = {
"RESET": SubResource("Animation_3s3em"),
"create": SubResource("Animation_wdodc"),
"delete": SubResource("Animation_d20ay")
}

[node name="notice" type="Control"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(65, 75)
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
script = ExtResource("1_h616u")

[node name="Main" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -65.0
offset_right = 94.0
offset_bottom = -5.0
grow_vertical = 0

[node name="Panel" type="Panel" parent="Main"]
layout_mode = 2

[node name="Content" type="MarginContainer" parent="Main"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Main/Content"]
layout_mode = 2

[node name="MarginIcon" type="MarginContainer" parent="Main/Content/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 5

[node name="Icon" type="TextureRect" parent="Main/Content/HBoxContainer/MarginIcon"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("2_oe23o")
expand_mode = 1
stretch_mode = 5

[node name="MarginLabel" type="MarginContainer" parent="Main/Content/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 5

[node name="Label" type="Label" parent="Main/Content/HBoxContainer/MarginLabel"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_77blq")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
